# pendulum

./: .gitignore  README.md
pendulum/: CMakeLists.txt  package.xml
pendulum/config/: pendulum_ros2_controller.yaml
pendulum/doc/: second_order.md
pendulum/include/: controller_base.h  controller_lqr.h  controller_mpc.h  controller_pid.h  pid.h
pendulum/launch/: control_cpp.launch.py  control_cpp.py  control_python.launch.py  control_python.py  empty_world.launch.py  spawn_gazebo.launch.py  spawn_gazebo.py  spawn_gazebo_sim.launch.py
pendulum/script/: LQR.py  control_py.py  controller_base.py  invert.py  lqr.py  testLQR.py
pendulum/src/: control.cpp  controller_lqr.cpp  controller_pid.cpp
pendulum/urdf/: cartpole.urdf  cartpole.urdf.xacro  cartpole_body.urdf.xacro  invertCar.urdf.xacro  pendulum.ros2_control.xacro
pendulum/urdf/invertCar/actuator/: invert.urdf.xacro
pendulum/world/: empty_world.world
